ref handling examole for Abhimanyu SIngh

--- a/Universal/Universal.Edge/Universal.Edge.csproj
+++ b/Universal/Universal.Edge/Universal.Edge.csproj
@@ -101,6 +101,9 @@
     </Compile>
     <Compile Include="MockData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReferenceHandlingPage.xaml.cs">
+      <DependentUpon>ReferenceHandlingPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="TestPage.xaml.cs">
       <DependentUpon>TestPage.xaml</DependentUpon>
     </Compile>
@@ -132,6 +135,10 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="ReferenceHandlingPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="TestPage.xaml">
       <SubType>Designer</SubType>
